# Mainstay

./: CHANGELOG.md  CONTRIBUTING.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
contracts/asset-registry/src/: lib.rs
contracts/engineer-registry/src/: lib.rs
contracts/lending/src/: lib.rs
contracts/lending/tests/: lending_tests.rs  test_get_contract_balance.rs  test_set_max_loan_amount.rs
contracts/lifecycle/src/: errors.rs  lib.rs  scoring.rs  types.rs
contracts/maintenance/src/: fuzz_tests.rs
docs/: architecture.md  audit-report.md  collateral-scoring.md  deployment-runbook.md  ttl-strategy.md
tests/: Cargo.toml  test_full_lifecycle_e2e.rs  test_lending_view_functions.rs
