[package]
name = "cross-platform-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
asset-registry = { path = "../contracts/asset-registry" }
engineer-registry = { path = "../contracts/engineer-registry" }
lifecycle = { path = "../contracts/lifecycle" }
lending = { path = "../contracts/lending" }
soroban-sdk = { version = "22.0.0", features = ["testutils"] }

[[test]]
name = "cross_platform_tests"
path = "cross_platform_tests.rs"

[[test]]
name = "test_full_lifecycle_e2e"
path = "test_full_lifecycle_e2e.rs"

[[test]]
name = "test_lending_features"
path = "test_lending_features.rs"

[[test]]
name = "test_loan_deadline"
path = "test_loan_deadline.rs"

[[test]]
name = "test_emergency_pause"
path = "test_emergency_pause.rs"

[[test]]
name = "test_admin_transfer"
path = "test_admin_transfer.rs"

[[test]]
name = "integration_tests"
path = "integration_tests.rs"

[[test]]
name = "lending_tests"
path = "lending_tests.rs"

[[test]]
name = "test_get_contract_balance"
path = "test_get_contract_balance.rs"

[[test]]
name = "test_set_max_loan_amount"
path = "test_set_max_loan_amount.rs"

[[test]]
name = "test_set_min_stake"
path = "test_set_min_stake.rs"

[[test]]
name = "test_voucher_history"
path = "test_voucher_history.rs"

[[test]]
name = "test_lending_view_functions"
path = "test_lending_view_functions.rs"
